git checkout test_notebook branch

--- a/.github/workflows/automate-button.yml
+++ b/.github/workflows/automate-button.yml
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+        with:
+          ref: test_notebook
       - name: Install dependencies
         shell: bash
         run: |
