--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         repository: NeuroDesk/transparent-singularity
         fetch-depth: 0
+        path: ./
     - name: Test singularity and cvmfs before pushing to neurocommand
       run: /bin/bash .github/workflows/test_singularity_cvmfs.sh
   run_notebook:
