--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -37,7 +37,7 @@ jobs:
     - name: Install dependencies
       shell: bash
       run: |
-        pip install nbmake pytest-xdist pytest-shell lmodule
+        pip install nbmake pytest-xdist pytest-shell
 
     - name: Run qsmxt_example
       shell: bash
