--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -28,8 +28,11 @@ jobs:
       uses: actions/setup-python@v3
 
     - name: Test singularity and cvmfs before pushing to neurocommand
+      shell: bash
       run: 
-        /bin/bash .github/workflows/test_singularity_cvmfs.sh
+        curl -J -O https://raw.githubusercontent.com/NeuroDesk/neurocommand/main/googlecolab_setup.sh
+        chmod +x googlecolab_setup.sh
+        ./googlecolab_setup.sh
 
     - name: Install dependencies
       shell: bash
@@ -42,4 +45,5 @@ jobs:
         export SINGULARITY_BINDPATH=/cvmfs,/mnt,/home
         export LMOD_CMD=/usr/share/lmod/lmod/libexec/lmod
         export MPLCONFIGDIR=/content/matplotlib-mpldir
+        export MODULEPATH=$(find /cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/ -maxdepth 1 -mindepth 1 -type d -exec realpath {} \; | tr '\n' ':')
         cd structural_imaging && python -m pytest -srP -vv --nbmake-timeout=100000 --nbmake qsmxt_example.ipynb
