--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -40,8 +40,9 @@ jobs:
       shell: bash
       run: |
         export LD_PRELOAD=
-        export APPTAINER_BINDPATH=/home/runner/work
+        echo "LD_PRELOAD=$LD_PRELOAD"
+        export APPTAINER_BINDPATH=/home/runner/work/example-notebooks
         export LMOD_CMD=/usr/share/lmod/lmod/libexec/lmod
-        export MPLCONFIGDIR=/home/runner/work/matplotlib-mpldir
+        export MPLCONFIGDIR=/home/runner/work/example-notebooks/matplotlib-mpldir
         export MODULEPATH=$(find /cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/ -maxdepth 1 -mindepth 1 -type d -exec realpath {} \; | tr '\n' ':')
         cd structural_imaging && python -m pytest -srP -vv --nbmake-timeout=100000 --nbmake qsmxt_example.ipynb
