--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -22,10 +22,12 @@ on:
 jobs:
   test_singularity_cvmfs:
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        notebooks: ["structural_imaging/qsmxt_example.ipynb", "structural_imaging/sct_toolbox_example.ipynb", "structural_imaging/nipype_module_example.ipynb"]
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
 
     - name: Test singularity and cvmfs before pushing to neurocommand
       run: 
@@ -36,7 +38,7 @@ jobs:
       run: |
         pip install nbmake pytest-xdist pytest-shell
 
-    - name: Run qsmxt_example
+    - name: Run ${{ matrix.server }}
       shell: bash
       run: |
         export LD_PRELOAD=
@@ -45,4 +47,4 @@ jobs:
         export LMOD_CMD=/usr/share/lmod/lmod/libexec/lmod
         export MPLCONFIGDIR=/home/runner/work/example-notebooks/example-notebooks/matplotlib-mpldir
         export MODULEPATH=$(find /cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/ -maxdepth 1 -mindepth 1 -type d -exec realpath {} \; | tr '\n' ':')
-        cd structural_imaging && python -m pytest -srP -vv --nbmake-timeout=100000 --nbmake qsmxt_example.ipynb
+        cd $(dirname ${{ matrix.server }}) && python -m pytest -srP -vv --nbmake-timeout=100000 --nbmake $(basename ${{ matrix.server }})
