--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -20,12 +20,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  test_singularity_cvmfs:
+  test_cvmfs:
     runs-on: ubuntu-20.04
-    strategy:
-      fail-fast: false
-      matrix:
-        notebooks: ["structural_imaging/qsmxt_example.ipynb", "structural_imaging/sct_toolbox_example.ipynb", "structural_imaging/nipype_module_example.ipynb"]
     steps:
     - uses: actions/checkout@v3
 
@@ -38,7 +34,15 @@ jobs:
       run: |
         pip install nbmake pytest-xdist pytest-shell
 
-    - name: Run ${{ matrix.server }}
+  test_notebooks:
+    runs-on: ubuntu-20.04
+    needs: test_cvmfs
+    strategy:
+      fail-fast: false
+      matrix:
+        notebooks: ["structural_imaging/qsmxt_example.ipynb", "structural_imaging/sct_toolbox_example.ipynb", "structural_imaging/nipype_module_example.ipynb"]
+    steps:
+    - name: Run ${{ matrix.notebooks }}
       shell: bash
       run: |
         export LD_PRELOAD=
@@ -47,4 +51,4 @@ jobs:
         export LMOD_CMD=/usr/share/lmod/lmod/libexec/lmod
         export MPLCONFIGDIR=/home/runner/work/example-notebooks/example-notebooks/matplotlib-mpldir
         export MODULEPATH=$(find /cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/ -maxdepth 1 -mindepth 1 -type d -exec realpath {} \; | tr '\n' ':')
-        cd $(dirname ${{ matrix.server }}) && python -m pytest -srP -vv --nbmake-timeout=100000 --nbmake $(basename ${{ matrix.server }})
+        cd $(dirname ${{ matrix.notebooks }}) && python -m pytest -srP -vv --nbmake-timeout=100000 --nbmake $(basename ${{ matrix.notebooks }})
