--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -42,8 +42,7 @@ jobs:
       shell: bash
       run: |
         export LD_PRELOAD=
-        echo "LD_PRELOAD=$LD_PRELOAD"
-        export APPTAINER_BINDPATH=/home/runner/work/example-notebooks/example-notebooks
+        export APPTAINER_BINDPATH=/home/runner/work/example-notebooks/example-notebooks,/neurodesktop-storage
         export LMOD_CMD=/usr/share/lmod/lmod/libexec/lmod
         export MPLCONFIGDIR=/home/runner/work/example-notebooks/example-notebooks/matplotlib-mpldir
         export MODULEPATH=$(find /cvmfs/neurodesk.ardc.edu.au/neurodesk-modules/ -maxdepth 1 -mindepth 1 -type d -exec realpath {} \; | tr '\n' ':')
