add options to set user for neurodesktop container in workflow

--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -73,6 +73,7 @@ jobs:
       image: vnmd/neurodesktop:latest
       volumes:
         - /home/runner/:/home/
+      options: --user root
     timeout-minutes: 1500
     strategy:
       fail-fast: false
