--- a/.github/workflows/test_changed_notebook.yml
+++ b/.github/workflows/test_changed_notebook.yml
@@ -82,6 +82,40 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Install system dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y \
+          r-base-dev \
+          cmake \
+          libabsl-dev \
+          libudunits2-dev \
+          libgdal-dev \
+          gdal-bin \
+          libgeos-dev \
+          libproj-dev \
+          libssl-dev \
+          libcurl4-openssl-dev \
+          libxml2-dev \
+          libjson-c-dev \
+          libgit2-dev \
+          libfontconfig1-dev \
+          libcairo2-dev \
+          libpango1.0-dev \
+          libharfbuzz-dev \
+          libfribidi-dev \
+          libfreetype6-dev \
+          libpng-dev \
+          libtiff5-dev \
+          libjpeg-dev \
+          libicu-dev \
+          libgsl-dev \
+          libopenblas-dev \
+          liblapack-dev \
+          zlib1g-dev \
+          pkg-config \
+          build-essential
+
     - name: Install dependencies
       shell: bash
       run: |
