--- a/books/_config.yml
+++ b/books/_config.yml
@@ -11,7 +11,7 @@ only_build_toc_files: true
 # See https://jupyterbook.org/content/execute.html
 execute:
   execute_notebooks: force
-  allow_errors: true
+  allow_errors: false
   timeout: 45000
   stderr_output: show
   run_in_temp: true
